--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 
   <section id="help">
     <h2>Help</h2>
-    <p>Need help? Try refreshing your page.</p>
+    <p>For any business or general enquiries, please email <a href="mailto:enquiries@hypeculture.com.au" style="color:#f0c;">enquiries@hypeculture.com.au</a></p>
   </section>
 
   <section class="lucky-draw">
