--- a/index.html
+++ b/index.html
@@ -96,17 +96,18 @@
   <section id="about">
     <h2>About Hype Shark</h2>
     <p>
-      Hype Shark started from a garage with nothing but passion, a few pairs of Yeezys, and a dream.
-      Over time, we grew into a warehouse full of sought-after collectibles — from Labubu plush toys
-      to Cry Baby figurines and rare sneakers. If it's trending, we probably have it.
+      Hype Shark, also known as PMFC (Pop Mart Fan Club) on Facebook Group/Marketplace, started from a garage with nothing but passion,
+      a few boxes of plush toys and collectibles, and a dream. Over time, we grew into a warehouse full of sought-after collectibles —
+      from Labubu plush toys to Cry Baby figurines and rare sneakers. If it's trending, we probably have it.
     </p>
   </section>
 
   <section id="shop">
     <h2>Shop</h2>
     <p>
-      Our online shop is currently under development. Meanwhile, we're building hype around our brand —
-      and giving you the chance to win some exclusive items by entering our Lucky Draw below! :)
+      Our online shop is currently under development (please visit our private group on Facebook for any Buy/Sell/Trade enquiries:
+      <a href="https://www.facebook.com/groups/136560191232738/" target="_blank" style="color:#f0c;">PMFC Facebook Group</a>). 
+      Meanwhile, we're building hype around our brand — and giving you the chance to win some exclusive items by entering our Lucky Draw below! :)
     </p>
   </section>
 
