--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     }
 
     .hero {
-      background-image: url("background.jpg");
+      background-image: url("background/labubu-bg.png");
       background-size: cover;
       background-position: center;
       color: white;
