--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="robots" content="noindex, nofollow">
   <title>Hype Culture</title>
-  <link href="https://fonts.googleapis.com/css2?family=Anton&family=Orbitron&display=swap" rel="stylesheet">
+  https://fonts.googleapis.com/css2?family=Anton&family=Orbitron&display=swap
   <style>
     body {
       margin: 0;
@@ -110,7 +110,7 @@
 
   <section id="shop">
     <h2>Shop</h2>
-    <p>Our online shop is currently under development (please visit our private group on Facebook for any Buy/Sell/Trade enquiries: <a href="https://www.facebook.com/groups/136560191232738/" target="_blank">PMFC Group</a>). Meanwhile, we're building hype around our brand — and giving you the chance to win some exclusive items by entering our Lucky Draw below! :)</p>
+    <p>Our online shop is currently under development (please visit our private group on Facebook for any Buy/Sell/Trade enquiries: <a href="https://www.facebook.com/groups/136560191232738/" target="_blank">PMFC Group</a our brand — and giving you the chance to win some exclusive items by entering our Lucky Draw below! :)</p>
   </section>
 
   <section class="form-section">
@@ -124,7 +124,6 @@
         <option value="Yeezy">Yeezy</option>
         <option value="CRYBABY">CRYBABY</option>
         <option value="PUCKY">PUCKY</option>
-        <option value="SKULLPANDA">SKULLPANDA</option>
         <option value="LABUBU">LABUBU</option>
       </select>
 
